<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_constrain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/light_night"
    tools:context="khaliliyoussef.gradproject.view.AddWord">

    <EditText
        android:id="@+id/ed_english"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="English Word"
        android:maxEms="20"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ed_arabic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/ed_arabic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="69dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="عربى"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/add_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="122dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="Add Word"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
