<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/light_night"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#b6484949"
        android:orientation="vertical">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/EditText_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="27dp"
            android:inputType="textAutoComplete"
            android:maxLength="20"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar" />

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginBottom="82dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/button_background"
            android:src="@mipmap/ic_action_keyboard"
            app:layout_constraintBottom_toTopOf="@+id/favorite"
            app:layout_constraintHorizontal_bias="0.357"
            app:layout_constraintLeft_toRightOf="@+id/cameraButton"
            app:layout_constraintRight_toLeftOf="@+id/audioButton" />


        <ImageButton
            android:id="@+id/favorite"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:src="@mipmap/favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageButton
            android:id="@+id/audioButton"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/button_background"
            android:src="@mipmap/audio"
            app:layout_constraintLeft_toRightOf="@+id/favorite"
            app:layout_constraintTop_toBottomOf="@+id/searchButton" />

        <ImageButton
            android:id="@+id/cameraButton"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/button_background"
            android:src="@mipmap/camera"
            app:layout_constraintRight_toLeftOf="@+id/favorite"
            app:layout_constraintTop_toBottomOf="@+id/searchButton" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="No Text Yet !"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditText_word" />


    </android.support.constraint.ConstraintLayout>
    <android.support.design.widget.NavigationView
        android:background="@color/windowBackground"
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />
</android.support.v4.widget.DrawerLayout>