<resources>
    <string name="app_name">TarGmly</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="email">khalilibrahim865@gmail.com</string>
    <string name="pref_type_key">databaseType</string>
    <string name="pref_insert_scientific">Scientific</string>
    <string name="pref_insert_general">General</string>
    <string name="pref_reset_database">resetDatabase</string>
    <string name="edTextEng">English or Arabic</string>
    <string name="buttonTranslate">translate</string>
    <string name="textRus">Translation here</string>

</resources>
