<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Home" />
        <item
            android:id="@+id/nav_online"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="Online Translate" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="Settings" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add_circle_outline_black_24dp"
            android:title="add New Words" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
            <item
                android:id="@+id/nav_copyright"
                android:icon="@drawable/ic_copyright_black_24dp"
                android:title="Copyright" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="About" />
        </menu>
    </item>


</menu>
