<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item app:showAsAction="never"
    android:id="@+id/rateUs"
    android:title="Rate US">

</item>

    <item
        android:id="@+id/settings"
        app:showAsAction="never"
        android:title="settings">

    </item>
</menu>